--- a/styles/__config.scss
+++ b/styles/__config.scss
@@ -13,4 +13,6 @@ $default-secondary-color: #9A9A9A;
   .location-info {color: $theme-color-primary;}
   .grid-item {background-color: $theme-color-primary;}
   .grid-item-width3 {background-color: $theme-color-secondary;}
+  #location-search {border-color: $theme-color-primary;}
+  #location-search-btn {background-color: $theme-color-primary;}
 }
