--- a/styles/_screens.scss
+++ b/styles/_screens.scss
@@ -36,6 +36,7 @@
   right: 0;
   bottom: 3em;
   left: 0;
+  overflow-y: scroll;
 
   .screen-heading {
     margin: 1.5em 0;
