--- a/styles/screens/_screen_locations.scss
+++ b/styles/screens/_screen_locations.scss
@@ -1,3 +1,28 @@
 .locations-container {
-
+  .list-module {
+    .search {
+      display: flex;
+      flex-wrap: nowrap;
+      justify-content: space-between;
+      width: 100%;
+      padding:0;
+      background-color: #FFFFFF;
+    }
+    #location-search, #location-search-btn {
+      height: inherit;
+      border-radius: 0.5em;
+      font-size: 0.875em;
+    }
+    #location-search {
+      flex-basis: 75%;
+      padding: 0.875em;
+    }
+    #location-search-btn {
+      text-align: center;
+      flex-basis: 20%;
+      padding: 0.875em 0;
+      border: none;
+      color: #FFFFFF;
+    }
+  }
 }
